fix: remove banner left bg padding on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2220,7 +2220,6 @@ body {
     height: 570px;
     width: 570px;
     bottom: 25%;
-    left: 0%;
     background-image: url("https://www.canada.ca/content/dam/tbs-sct/images/digital-government/g7_gov_ai/gov_ai_1920x360.png");
     background-size: 150% 100%;
 
